[package]
name = "journal"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["cargo", "derive"] }
dirs = "6.0.0"
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_16"] }
regex = "1.11.1"
rusqlite = { version = "0.34.0", features = ["chrono", "uuid"] }
uuid = { version = "1.16.0", features = ["v4"] }
